scripts/nullaway/annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8.txt
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:79: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:583: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        if(o==null)  return null;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:130: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:193: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/OAuthMessage.java:134: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return getParameter(OAuth.OAUTH_SIGNATURE);
        ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/OAuthMessage.java:312: error: [NullAway] dereferenced expression name is @Nullable
                if (name.startsWith("oauth_")) {
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/weibo/WeiboQQ.java:193: error: [NullAway] dereferenced expression jsonObject.getJSONObject("data") is @Nullable
                        + jsonObject.getJSONObject("data").getString("name");
                                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mysql/WeiboDaoJdbcImpl.java:82: error: [NullAway] dereferenced expression dataSource is @Nullable
            conn = dataSource.getConnection();
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mysql/WeiboDaoJdbcImpl.java:150: error: [NullAway] dereferenced expression dataSource is @Nullable
            conn = dataSource.getConnection();
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mysql/WeiboDaoJdbcImpl.java:191: error: [NullAway] dereferenced expression dataSource is @Nullable
            conn = dataSource.getConnection();
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mysql/WeiboDaoJdbcImpl.java:211: error: [NullAway] passing @Nullable parameter 'WeiboType.of(type)' where @NonNull is required
                    Weibo weibo = (Weibo) WeiboManager.newWeibo(WeiboType.of(type));
                                                                            ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mysql/WeiboDaoJdbcImpl.java:246: error: [NullAway] dereferenced expression dataSource is @Nullable
            conn = dataSource.getConnection();
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/dao/mem/WeiboDaoMemoryImpl.java:50: error: [NullAway] dereferenced expression w.getWeiboId() is @Nullable
                    if (w.getWeiboId().equals(weiboId)) {
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/web/AccountAcction.java:54: error: [NullAway] @NonNull field weiboDao not initialized
    private WeiboDao weiboDao;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/com/gengweibo/web/AccountAcction.java:537: error: [NullAway] dereferenced expression account.getWeiboMap().get(weiboId) is @Nullable
                account.getWeiboMap().get(weiboId).setSynUpdate(synUpdate);
                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/http/HttpMessage.java:51: error: [NullAway] passing @Nullable parameter 'url' where @NonNull is required
        this(method, url, null);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/signature/OAuthSignatureMethod.java:94: error: [NullAway] dereferenced expression name is @Nullable
        if (name.endsWith(_ACCESSOR)) {
                ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/signature/OAuthSignatureMethod.java:155: error: [NullAway] dereferenced expression message.method is @Nullable
        return OAuth.percentEncode(message.method.toUpperCase()) + '&'
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/signature/Base64.java:215: error: [NullAway] initializer method does not guarantee @NonNull field buf (line 132) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Base64(int lineLength, byte[] lineSeparator) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/signature/Base64.java:282: error: [NullAway] assigning @Nullable expression to @NonNull field
                    buf = null;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url24d793285d_auzll_gengweibo_tgz-pJ8-org_json_TestJ8/src/net/oauth/signature/Base64.java:287: error: [NullAway] assigning @Nullable expression to @NonNull field
                buf = null;
                    ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
21 errors
